# joisquashed

./: .gitignore  pyproject.toml  requirements.txt  run.sh  server.py
static/: styles.css
templates/: chat.html  tutorial.html
